# cli

./: .env  .envcli.json  .envcli.vault  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  template.rs  test.txt  windows-installation.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: cd.yml  rust.yml  test.yml
.github/workflows.disabled/: br.yml
src/: constants.rs  consts.rs  errors.rs  macros.rs  main.rs  sdk.rs  types.rs
src/commands/: add_recipient.rs  add_user_to_project.rs  auth.rs  behaviour.rs  clean.rs  config.rs  debug.rs  decrypt.rs  delete.rs  delete_key.rs  encrypt.rs  export.rs  gen.rs  genkey.rs  get_config.rs  get_project.rs  import.rs  init.rs  link.rs  list_keys.rs  login.rs  mod.rs  new.rs  project.rs  read_local.rs  rpgp.rs  run.rs  set.rs  set_local.rs  set_multi.rs  set_single.rs  settings.old.rs  settings.rs  shell.rs  sign.rs  unlink.rs  unset.rs  upload.rs  variables.rs  verify.rs  (+1 more)
src/commands/_delete/: mod.rs
src/commands/change/: mod.rs  primary_key.rs
src/commands/clear/: mod.rs  password.rs
src/commands/config/: migrate.rs  mod.rs
src/commands/config/set/: keyring_expiry.rs  mod.rs  primary_key.rs  unsafe_password.rs
src/commands/delete/: key.rs  mod.rs  project.rs
src/commands/get/: config.rs  keys.rs  mod.rs  project.rs  projects.rs
src/commands/keyring/: check.rs  clear.rs  mod.rs  view.rs
src/commands/new/: key.rs  mod.rs  project.rs
src/commands/project/: add_user.rs  list_users.rs  mod.rs  remove_user.rs
src/commands/secrets/: mod.rs  set.rs
src/commands/set/: mod.rs
src/controllers/: variables.rs
src/utils/: auth.rs  btreemap.rs  choice.rs  config.rs  e.rs  encryption.rs  gpgconf.rs  key.rs  keyring.rs  kvpair.rs  mod.rs  partial_variable.rs  partialkey.rs  prompt.rs  rpgp.rs  settings.rs  table.rs  to_btreemap.rs  variable.rs  vecu8.rs
