[package]
name = "env-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.0"
box_drawing = "0.1.2"
clap = { version = "4.1.9", features = ["derive", "suggestions"] }
clap_complete = "4.1.5"
colored = "2.0.0"
console = "0.15.7"
crypto-hash = "0.3.4"
ctrlc = "3.3.0"
hex = "0.4.3"
home = "0.5.5"
indoc = "2.0.1"
inquire = "0.6.1"
paste = "1.0.12"
pgp = "0.10.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
regex="1"
reqwest = { version="0.11.12", features=["json"] }
rsa = "0.9.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.87"
smallvec = "1.10.0"
term_size = "0.3.2"
textwrap = "0.16.0"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
walkdir = "2.3.2"
winapi = { version="0.3.9", features = ["minwindef", "tlhelp32", "processthreadsapi", "handleapi", "winerror"] }
