[package]
name = "envx"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Ng <alex@ayo.icu>"]
description = "Interact with envx servers via CLI"
readme = "README.md"
homepage = "https://github.com/env-store/rusty-cli"
repository = "https://github.com/env-store/rusty-cli"
rust-version = "1.75.0"
default-run = "envx"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "envx"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.71"
clap = { version = "4.1.9", features = ["derive", "suggestions"] }
clap_complete = "4.1.5"

# stuff i need for the table
box_drawing = "0.1.2"
colored = "2.0.0"
console = "0.15.7"
indoc = "2.0.1"

inquire = "0.6.1"

# macro stuff
paste = "1.0.12"

crypto-hash = "0.3.4"
ctrlc = "3.3.0"
hex = "0.4.3"
home = "0.5.5"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11.12", features = ["json"] }

pgp = "0.10.2"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.10.0"
textwrap = "0.16.0"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
walkdir = "2.3.2"
winapi = { version = "0.3.9", features = [
  "minwindef",
  "tlhelp32",
  "processthreadsapi",
  "handleapi",
  "winerror",
] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8.0"
futures = "0.3"
keyring = "2.3.1"
bincode = "1.3.3"
