[package]
name = "envx"
version = "2.0.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Ng <alex@ayo.icu>"]
description = "Interact with envx servers via CLI"
readme = "README.md"
homepage = "https://github.com/env-store/rusty-cli"
repository = "https://github.com/env-store/rusty-cli"
rust-version = "1.75.0"
default-run = "envx"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "envx"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "suggestions"] }
clap_complete = "4.5.23"

# stuff i need for the table
box_drawing = "0.1.2"
colored = "2.1.0"
console = "0.15.8"
indoc = "2.0.5"

inquire = "0.6.1"

# macro stuff
paste = "1.0.15"

crypto-hash = "0.3.4"
ctrlc = "3.4.5"
hex = "0.4.3"
home = "0.5.9"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.12.7", features = ["json"] }

pgp = "0.13.2"

serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13.2"
textwrap = "0.16.1"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
walkdir = "2.5.0"
winapi = { version = "0.3.9", features = [
  "minwindef",
  "tlhelp32",
  "processthreadsapi",
  "handleapi",
  "winerror",
] }
chrono = { version = "^0.4.38", features = ["serde"] }
rayon = "1.10.0"
futures = "0.3"
keyring = { version = "3.2.0", features = [
  "apple-native",
  "windows-native",
  "linux-native",
] }
bincode = "1.3.3"
